--- a/Snail Page/index.html
+++ b/Snail Page/index.html
@@ -104,9 +104,9 @@
         <p>Questions? Call 1-233-444-8888</p>
         <div class="footer-cols">
             <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Ways To Breed</a></li>
-                <li><a href="#">Customize Shell</a></li>
+                <li><a href="https://www.vedantu.com/evs/facts-about-snails">FAQ</a></li>
+                <li><a href="https://www.wikihow.com/Breed-a-Pet-Snail#:~:text=For%20two%20snails%20to%20mate,out%20of%20the%20snails%20body.">Ways To Breed</a></li>
+                <li><a href="https://www.amazon.in/snail-shell/s?k=snail+shell">Customize Shell</a></li>
             </ul>
             <ul>
                 <li><a href="https://www.thembalethunkomazi.org/snail-project">Help Center</a> </li>
